tests/error/ptr_arg_array.gw
#! [contains] must be defined with empty
funcdef void my_func (int i[4]);
